kubernetes/apps/nextcloud/whiteboard/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: whiteboard
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: whiteboard
  ingress:
    # Envoy proxy (network ns): whiteboard :3002 (cloud.${SECRET_DOMAIN}/whiteboard)
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": network
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: "3002"
              protocol: TCP
    # Same namespace
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": nextcloud
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Redis/Dragonfly (whiteboard session storage)
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": database
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # Nextcloud API via the public domain (cloud.${SECRET_DOMAIN})
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
